@@ -177,60 +177,60 @@ public class SakaiLTIUtilTest {
 
 	@Test
 	public void testConvertLong() {
-		Long l = SakaiLTIUtil.getLongNull(new Long(2));
-		assertEquals(l, new Long(2));
-		l = SakaiLTIUtil.getLongNull(new Double(2.2));
-		assertEquals(l, new Long(2));
-		l = SakaiLTIUtil.getLongNull(null);
+		Long l = LTIUtil.toLongNull(Long.valueOf(2));
+		assertEquals(l, Long.valueOf(2));
+		l = LTIUtil.toLongNull(Double.valueOf(2.2));
+		assertEquals(l, Long.valueOf(2));
+		l = LTIUtil.toLongNull(null);
 		assertEquals(l, null);
-		l = SakaiLTIUtil.getLongNull("fred");
+		l = LTIUtil.toLongNull("fred");
 		assertEquals(l, null);
-		l = SakaiLTIUtil.getLongNull("null");
+		l = LTIUtil.toLongNull("null");
 		assertEquals(l, null);
-		l = SakaiLTIUtil.getLongNull("NULL");
+		l = LTIUtil.toLongNull("NULL");
 		assertEquals(l, null);
 		// This one is a little weird but it is how it was written - double is different
-		l = SakaiLTIUtil.getLongNull("");
-		assertEquals(l, new Long(-1));
-		l = SakaiLTIUtil.getLongNull("2");
-		assertEquals(l, new Long(2));
-		l = SakaiLTIUtil.getLongNull("2.5");
+		l = LTIUtil.toLongNull("");
 		assertEquals(l, null);
-		l = SakaiLTIUtil.getLongNull(new Float(3.1));
-		assertEquals(l, new Long(3));
+		l = LTIUtil.toLongNull("2");
+		assertEquals(l, Long.valueOf(2));
+		l = LTIUtil.toLongNull("2.5");
+		assertEquals(l, null);
+		l = LTIUtil.toLongNull(Float.valueOf(3.1f));
+		assertEquals(l, Long.valueOf(3));
 		// Casting truncates
-		l = SakaiLTIUtil.getLongNull(new Float(3.9));
-		assertEquals(l, new Long(3));
-		l = SakaiLTIUtil.getLongNull(new Integer(3));
-		assertEquals(l, new Long(3));
+		l = LTIUtil.toLongNull(Float.valueOf(3.9f));
+		assertEquals(l, Long.valueOf(3));
+		l = LTIUtil.toLongNull(Integer.valueOf(3));
+		assertEquals(l, Long.valueOf(3));
 	}
 
 	@Test
 	public void testConvertDouble() {
-		Double d = SakaiLTIUtil.getDoubleNull(new Double(2.0));
-		assertEquals(d, new Double(2.0));
-		d = SakaiLTIUtil.getDoubleNull(new Double(2.5));
-		assertEquals(d, new Double(2.5));
-		d = SakaiLTIUtil.getDoubleNull(null);
+		Double d = LTIUtil.toDoubleNull(Double.valueOf(2.0));
+		assertEquals(d, Double.valueOf(2.0));
+		d = LTIUtil.toDoubleNull(Double.valueOf(2.5));
+		assertEquals(d, Double.valueOf(2.5));
+		d = LTIUtil.toDoubleNull(null);
 		assertEquals(d, null);
-		d = SakaiLTIUtil.getDoubleNull("fred");
+		d = LTIUtil.toDoubleNull("fred");
 		assertEquals(d, null);
-		d = SakaiLTIUtil.getDoubleNull("null");
+		d = LTIUtil.toDoubleNull("null");
 		assertEquals(d, null);
-		d = SakaiLTIUtil.getDoubleNull("NULL");
+		d = LTIUtil.toDoubleNull("NULL");
 		assertEquals(d, null);
-		d = SakaiLTIUtil.getDoubleNull("");
+		d = LTIUtil.toDoubleNull("");
 		assertEquals(d, null);
-		d = SakaiLTIUtil.getDoubleNull("2.0");
-		assertEquals(d, new Double(2.0));
-		d = SakaiLTIUtil.getDoubleNull("2.5");
-		assertEquals(d, new Double(2.5));
-		d = SakaiLTIUtil.getDoubleNull("2");
-		assertEquals(d, new Double(2.0));
-		d = SakaiLTIUtil.getDoubleNull(new Long(3));
-		assertEquals(d, new Double(3.0));
-		d = SakaiLTIUtil.getDoubleNull(new Integer(3));
-		assertEquals(d, new Double(3.0));
+		d = LTIUtil.toDoubleNull("2.0");
+		assertEquals(d, Double.valueOf(2.0));
+		d = LTIUtil.toDoubleNull("2.5");
+		assertEquals(d, Double.valueOf(2.5));
+		d = LTIUtil.toDoubleNull("2");
+		assertEquals(d, Double.valueOf(2.0));
+		d = LTIUtil.toDoubleNull(Long.valueOf(3));
+		assertEquals(d, Double.valueOf(3.0));
+		d = LTIUtil.toDoubleNull(Integer.valueOf(3));
+		assertEquals(d, Double.valueOf(3.0));
 	}
 
 	@Test
@@ -770,27 +770,27 @@ public class SakaiLTIUtilTest {
 		assertEquals(retval, false);
 
 		// Only content
-		content.put(LTIService.LTI_NEWPAGE, new Integer(0));
+		content.put(LTIService.LTI_NEWPAGE, 0L);
 		retval = SakaiLTIUtil.getNewpage(tool, content, true);
 		assertEquals(retval, false);
-		content.put(LTIService.LTI_NEWPAGE, new Integer(1));
+		content.put(LTIService.LTI_NEWPAGE, 1L);
 		retval = SakaiLTIUtil.getNewpage(tool, content, false);
 		assertEquals(retval, true);
 
 		// Tool wins
-		tool.put(LTIService.LTI_NEWPAGE, new Integer(LTIService.LTI_TOOL_NEWPAGE_OFF));
+		tool.put(LTIService.LTI_NEWPAGE, LTIService.LTI_TOOL_NEWPAGE_OFF);
 		retval = SakaiLTIUtil.getNewpage(tool, content, false);
 		assertEquals(retval, false);
 
-		tool.put(LTIService.LTI_NEWPAGE, new Integer(LTIService.LTI_TOOL_NEWPAGE_ON));
+		tool.put(LTIService.LTI_NEWPAGE, Long.valueOf(LTIService.LTI_TOOL_NEWPAGE_ON));
 		retval = SakaiLTIUtil.getNewpage(tool, content, false);
 		assertEquals(retval, true);
 
 		// Let content win
-		tool.put(LTIService.LTI_NEWPAGE, new Integer(LTIService.LTI_TOOL_NEWPAGE_CONTENT));
+		tool.put(LTIService.LTI_NEWPAGE, Long.valueOf(LTIService.LTI_TOOL_NEWPAGE_CONTENT));
 		retval = SakaiLTIUtil.getNewpage(tool, content, false);
 		assertEquals(retval, true);
-		content.put(LTIService.LTI_NEWPAGE, new Integer(0));
+		content.put(LTIService.LTI_NEWPAGE, 0L);
 		retval = SakaiLTIUtil.getNewpage(tool, content, true);
 		assertEquals(retval, false);
 	}
@@ -806,12 +806,12 @@ public class SakaiLTIUtilTest {
 		retval = SakaiLTIUtil.getFrameHeight(tool, content, "1200px");
 		assertEquals(retval, "1200px");
 
-		content.put(LTIService.LTI_FRAMEHEIGHT, new Integer(42));
+		content.put(LTIService.LTI_FRAMEHEIGHT, Long.valueOf(42));
 		retval = SakaiLTIUtil.getFrameHeight(tool, content, "1200px");
 		assertEquals(retval, "42px");
 
 		// Tool is empty
-		content.put(LTIService.LTI_FRAMEHEIGHT, new Integer(42));
+		content.put(LTIService.LTI_FRAMEHEIGHT, Long.valueOf(42));
 		retval = SakaiLTIUtil.getFrameHeight(tool, content, "1200px");
 		assertEquals(retval, "42px");
 
@@ -820,7 +820,7 @@ public class SakaiLTIUtilTest {
 		retval = SakaiLTIUtil.getFrameHeight(tool, content, "1200px");
 		assertEquals(retval, "44px");
 
-		tool.put(LTIService.LTI_FRAMEHEIGHT, new Integer(100));
+		tool.put(LTIService.LTI_FRAMEHEIGHT, Long.valueOf(100));
 		retval = SakaiLTIUtil.getFrameHeight(tool, content, "1200px");
 		assertEquals(retval, "44px");
 
@@ -840,8 +840,8 @@ public class SakaiLTIUtilTest {
 		content.put(LTIService.LTI_LAUNCH, "http://localhost:a-launch?x=42");
 		content.put(LTIService.LTI_TITLE, "An LTI title");
 		content.put(LTIService.LTI_DESCRIPTION, "An LTI DESCRIPTION");
-		content.put(LTIService.LTI_NEWPAGE, Long.valueOf(1));
-		content.put(LTIService.LTI_TOOL_ID, Long.valueOf(42)); // Should not come back
+		content.put(LTIService.LTI_NEWPAGE, 1L);
+		content.put(LTIService.LTI_TOOL_ID, 42L); // Should not come back
 
 		Element element = SakaiLTIUtil.archiveContent(doc, content, null);
 		root.appendChild(element);
@@ -867,7 +867,7 @@ public class SakaiLTIUtilTest {
 		tool.put(LTIService.LTI_LAUNCH, "http://localhost:a-launch?x=42");
 		tool.put(LTIService.LTI_TITLE, "An LTI title");
 		tool.put(LTIService.LTI_DESCRIPTION, "An LTI DESCRIPTION");
-		tool.put(LTIService.LTI_NEWPAGE, Long.valueOf(1));
+		tool.put(LTIService.LTI_NEWPAGE, 1L);
 
 		tool.put(LTIService.LTI_SENDNAME, "please");  // Wil export (bad data) will not import
 		tool.put(LTIService.LTI_SECRET, "verysecure");  // Should not come back - Not archived
@@ -913,7 +913,7 @@ public class SakaiLTIUtilTest {
 		content.put(LTIService.LTI_LAUNCH, "http://localhost:a-launch?x=42");
 		content.put(LTIService.LTI_TITLE, "An LTI title");
 		content.put(LTIService.LTI_DESCRIPTION, "An LTI DESCRIPTION");
-		content.put(LTIService.LTI_NEWPAGE, Long.valueOf(1));
+		content.put(LTIService.LTI_NEWPAGE, 1L);
 
 		Map<String, Object> tool = new HashMap();
 		tool.put(LTIService.LTI_FRAMEHEIGHT, Long.valueOf(42));
@@ -921,7 +921,7 @@ public class SakaiLTIUtilTest {
 		tool.put(LTIService.LTI_LAUNCH, "http://localhost:a-launch?x=42");
 		tool.put(LTIService.LTI_TITLE, "An LTI title");
 		tool.put(LTIService.LTI_DESCRIPTION, "An LTI DESCRIPTION");
-		tool.put(LTIService.LTI_NEWPAGE, Long.valueOf(1));
+		tool.put(LTIService.LTI_NEWPAGE, 1L);
 		tool.put(LTIService.LTI_CONSUMERKEY, "key12345");  // Should not come back - Not archived
 		tool.put(LTIService.LTI_SECRET, "sec12345");  // Should not come back - Not archived
 
@@ -953,7 +953,7 @@ public class SakaiLTIUtilTest {
 		tool.put(LTIService.LTI_LAUNCH, "http://localhost:a-launch?x=42");
 		tool.put(LTIService.LTI_TITLE, "An LTI title");
 		tool.put(LTIService.LTI_DESCRIPTION, "An LTI DESCRIPTION");
-		tool.put(LTIService.LTI_NEWPAGE, Long.valueOf(1));
+		tool.put(LTIService.LTI_NEWPAGE, 1L);
 
 		test = SakaiLTIUtil.computeToolCheckSum(tool);
 		assertEquals(test, null);
